--- a/agency-app-django/templates/index.html
+++ b/agency-app-django/templates/index.html
@@ -22,7 +22,7 @@
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">{{sld.title}}<span> {{sld.lasttitle}}</span></h2>
                 <p class="animate__animated animate__fadeInUp">{{sld.description}}</p>
-                <a href="{{sld.button}}" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+                <a href="{{sld.button}}" class="btn-get-started animate__animated animate__fadeInUp">Github Repo</a>
               </div>
             </div>
           </div>
@@ -80,11 +80,7 @@
             <p class="fst-italic">
             {{aboutdata.0.text1}}
             </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
+
             <p>
               {{aboutdata.0.text2}}
             </p>
