--- a/agency-app-django/templates/blog-single.html
+++ b/agency-app-django/templates/blog-single.html
@@ -148,8 +148,9 @@
 
               <h3 class="sidebar-title">Search</h3>
               <div class="sidebar-item search-form">
-                <form action="">
-                  <input type="text">
+                  <form action="{% url 'blog:search' %}" method=POST>
+                  {% csrf_token %}
+                  <input type="text" name="searched">
                   <button type="submit"><i class="bi bi-search"></i></button>
                 </form>
               </div><!-- End sidebar search formn-->
