--- a/agency-app-django/templates/search.html
+++ b/agency-app-django/templates/search.html
@@ -11,7 +11,7 @@
 <br/>
 <br/>
 
-
+    <main id="main">
       {% if posts %}
              <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog">
@@ -129,6 +129,7 @@
       {% endif %}
 
 <br/>
+      <main/>
 
 
 
