--- a/agency-app-django/templates/base.html
+++ b/agency-app-django/templates/base.html
@@ -44,7 +44,7 @@
     />
 
     <!-- Template Main CSS File -->
-    <link href="{% static 'assets/css/style.css'%}" rel="stylesheet" />
+    <link href="{% static 'assets/css/index.css'%}" rel="stylesheet" />
 
     <!-- highlight code on page css cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.3.1/styles/monokai-sublime.css">
@@ -77,7 +77,8 @@
     <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js'%}"></script>
 
     <!-- Template Main JS File -->
-    <script src="{% static 'assets/js/main.js'%}"></script>
+    <script src="{% static 'assets/js/index.js'%}"></script>
+ 
     
     <!-- highlight code on page js cdn -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
