--- a/agency-app-django/templates/portfolio.html
+++ b/agency-app-django/templates/portfolio.html
@@ -36,6 +36,10 @@
             </ul>
           </div>
         </div>
+    
+
+      
+          <!-- Here we used data from many to many relation django -->
 
         <div class="row portfolio-container">
 
@@ -43,10 +47,14 @@
           {% for port in portfolio %}
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="{{port.image1.url}}" class="img-fluid" alt="">
+
+
+                  <img src="{{port.image1.url}}" class="img-fluid" alt="">
+          
+
+
               <div class="portfolio-info">
                 <h4>{{port.title}}</h4>
-
                 <div class="portfolio-links">
                   <a href="{{port.image1.url}}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="{% url 'details' port.id port.title %}" title="More Details"><i class="bx bx-link"></i></a>
@@ -55,7 +63,7 @@
             </div>
           </div>
           {% endfor %}
-
+      
         </div>
 
       </div>
