--- a/agency-app-django/templates/pdf.html
+++ b/agency-app-django/templates/pdf.html
@@ -1,9 +1,4 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block title %}
- <title> Profile Home </title>
-{% endblock %}
-{% block content %}
+
 
 <style type="text/css">
 	#user_pic{
@@ -25,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="card card-body" id="user-info-box">
-				<img id="user_pic" src="{{profile.profile_pic.url}}">
+				<img id="user_pic" src="{{profile.profile_pic.path}}">
 				<br>
 				<h2>{{profile}}</h2>
 				{% if pro  %}
@@ -35,9 +30,7 @@
 				<hr>
 				<p>{{profile.bio}}</p>
 				<hr>
-				<a class="btn btn-info btn-block" href="{% url 'update_profile'  %}">Edit Profile</a>
-				<br>
-				<a class="btn btn-success btn-block" href="{% url 'account_pdf' %}">PDF</a>
+	
 			</div>
 		</div>
 	 {% if pro  %}
@@ -62,7 +55,7 @@
 						<td>{{profile.user_id_number}}</td>
 						<td>{{purchase.requested_time}}</td>
 						<td>{{purchase.plan_name}}</td>
-						<td>৳ {{purchase.How_much_you_paid}}</td>
+						<td>{{purchase.How_much_you_paid}}</td>
 						
 					</tr>
 				</table>
@@ -72,5 +65,5 @@
 	</div>
 </div>
 
-{% endblock %}
+
 
