--- a/agency-app-django/templates/base/header.html
+++ b/agency-app-django/templates/base/header.html
@@ -37,6 +37,7 @@
           <li><a class="{% block portfolioactive %} {% endblock %}" href="{% url 'portfolio'%}">Portfolio</a></li>
           <li><a class="{% block teamactive %} {% endblock %}" href="{% url 'team'%}">Team</a></li>
           <li><a class="{% block pricingactive %} {% endblock %}" href="{% url 'pricing'%}">Pricing</a></li>
+          <li><a class="{% block chatactive %} {% endblock %}" href="{% url 'chat:friend_list'%}">Chat</a></li>
           <li><a class="{% block blogactive %} {% endblock %}" href="{% url 'blog:blog'%}">Blog</a></li>
           <li><a class="{% block contactactive %}{% endblock %}" href="{% url 'contact'%}">Contact</a></li>
 
